* WebUI/Transactions: Show accumulated VSize() on X-axis (insted of accumulated raw size of the txs)
* Lib: fixed issue #32 (Broken private key padding)
* Completely removed support for stealth addresses
* Client: store length of wallet's balance maps (in "mapsize.gob") for time and memory optimization on next boot
* Client: improved time of loading mempool from disk

1.9.3 - 2017-12-26
* Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
* Client: Fixed problem with returning the same command again by OneConnection.FetchMessage()
* Wallet: New command line switch "-stdin" to get the seed password from stdin
* Wallet: New command line switch "-txfn <filename>" to control the name of the output transaction file
* Client: Check nonce inside each version messages and disconnect the peer if already had it
* Client: Redone protection os accessing values in "common" package, to prevent data race
* Lib: "chain.BlockTreeEnd" is now only accessible through multi-thread protected methods LastBlock() and SetLast()
* Client: Added network.CompactBlocksMutex to prevent data race
* Client/WebUI/MakeTx: For privacy, randomly modify the default SPB by up to +/- 10%
* Client/WebUI/Network: Allows to edit "friends.txt" file
* Client: Data is being written to peer TCP connections from a desigated threads
* Client: And peer that you connect to manually, automatically gets marked as Special (no auto-dropping)
* Client: Automatically connect to IPs from file "friends.txt" (inside the client/ folder)
* Client/WebUI/MakeTx: Show P2SH-WPKH instead of P2KH, only if currently selected wallet contains "# Auto-translate to SegWit"
* Client/WebUI/MakeTx: Address Book shows auto calculated P2SH-WPKH Addresses from currently selected wallet
* Client: Show real endpoint's TCP port for incomming connections
* Client: Run Tick() method for each peer not more often than each 100 ms
* Client: Run SendInvs() method for each peer not more often each 10 ms